@@ -7,7 +7,6 @@
   padding: 8px 12px;
   font-size: 24px;
   line-height: 30px;
-  border: 2px solid #ccc;
   -webkit-border-radius: 8px;
      -moz-border-radius: 8px;
           border-radius: 8px;
@@ -22,29 +21,15 @@
   border: 2px solid #0097cf;
 }
 
-.tt-query {
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-}
-
 .tt-hint {
   color: #999
 }
 
 .tt-menu {
-  width: 422px;
+  width: 100%;
   margin: 12px 0;
   padding: 8px 0;
   background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 8px;
-     -moz-border-radius: 8px;
-          border-radius: 8px;
-  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-          box-shadow: 0 5px 10px rgba(0,0,0,.2);
   max-height: 320px;
   overflow-y: auto;
 }
@@ -70,3 +55,9 @@
 .tt-suggestion p {
   margin: 0;
 }
+
+.crumb_wrap					{display:none;}
+#view_search_test			{margin:auto; width:960px; margin-bottom:480px; margin-top:20px;}
+input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
+.search						{display:inline-block; width:320px; margin-bottom:10px;}
+
