@@ -7,59 +7,48 @@
 
 #view_search
 {view_head}
-<style>{css}</style>
+<style>{css}.chosen-container 			{min-width:300px;}</style>
 {beige}
 {main_head}
-{main_max}
 {view_search_test}
 {view_tail}
 
 #view_search_test
 
-<div id="view_search_test" style="margin:auto;width:960px;">
+<div id="view_search_test">
 
-<div style="display:none;">
+<div style="display:none;" class="search">
 <select id="view_search_select_country" class="chosen">
 	<option value></option>
 	{search_options_country}
 </select>
-</div>
-
-<div style="display:none;">
+</div><div style="display:none;" class="search">
 <select id="view_search_select_funder" class="chosen">
 	<option value></option>
 	{search_options_funder}
 </select>
-</div>
-
-<div style="display:none;">
+</div><div style="display:none;" class="search">
 <select id="view_search_select_sector" class="chosen">
 	<option value></option>
 	{search_options_sector}
 </select>
-</div>
-
-<div style="display:none;">
+</div><div style="display:none;" class="search">
 <select id="view_search_select_category" class="chosen">
 	<option value></option>
 	{search_options_category}
 </select>
-</div>
-
-<div style="display:none;">
+</div><div style="display:none;" class="search">
 <select id="view_search_select_publisher" class="chosen">
 	<option value></option>
 	{search_options_publisher}
 </select>
-</div>
-
-<div style="display:none;">
+</div><div style="display:none;" class="search">
 <select id="view_search_select_year" class="chosen">
 	<option value></option>
 	{search_options_year}
 </select>
 </div>
 
-<input type="text" id="view_search_string" class="typeahead" style="font-size:32px;width:960px;height:48px;"  />
+<input type="text" id="view_search_string" class="typeahead" placeholder="Type to search"/>
 	
 </div>
