@@ -1,3 +1,8 @@
+Development Portal (2015-06-24 shi)
+==============================
+Added initial page layout for Search
+
+
 Development Portal (2015-06-18 shi)
 ==============================
 Added settings dropdown buttons and link
